--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@nestjs/common": "11.0.5",
     "@nestjs/config": "4.0.0",
     "@nestjs/core": "11.0.5",
+    "@nestjs/microservices": "11.0.11",
     "@nestjs/passport": "11.0.5",
     "@nestjs/platform-express": "11.0.5",
     "@nestjs/swagger": "11.0.3",
     "@nestjs/typeorm": "11.0.0",
+    "amqp-connection-manager": "4.1.14",
+    "amqplib": "0.10.5",
     "bcrypt": "5.1.1",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
@@ -45,6 +48,7 @@
     "@eslint/eslintrc": "3.2.0",
     "@nestjs/cli": "11.0.2",
     "@nestjs/testing": "11.0.5",
+    "@types/amqplib": "0.10.7",
     "@types/bcrypt": "5.0.2",
     "@types/compression": "1.7.5",
     "@types/express": "5.0.0",
