--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "devDependencies": {
     "@electric-sql/pglite": "0.2.16",
     "@eslint/eslintrc": "3.2.0",
+    "@eslint/js": "9.21.0",
     "@nestjs/cli": "11.0.2",
     "@nestjs/testing": "11.0.5",
     "@types/amqplib": "0.10.7",
