--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nestjs/common": "11.0.5",
     "@nestjs/config": "4.0.0",
     "@nestjs/core": "11.0.5",
+    "@nestjs/event-emitter": "3.0.1",
     "@nestjs/microservices": "11.0.11",
     "@nestjs/passport": "11.0.5",
     "@nestjs/platform-express": "11.0.5",
@@ -42,7 +43,8 @@
     "typeorm": "0.3.20",
     "typeorm-naming-strategies": "4.1.0",
     "typeorm-transactional": "0.5.0",
-    "uuid": "11.0.5"
+    "uuid": "11.0.5",
+    "ws": "8.18.1"
   },
   "devDependencies": {
     "@electric-sql/pglite": "0.2.16",
@@ -60,6 +62,7 @@
     "@types/request-ip": "0.0.41",
     "@types/supertest": "6.0.2",
     "@types/uuid": "10.0.0",
+    "@types/ws": "8.18.0",
     "@typescript-eslint/eslint-plugin": "8.21.0",
     "@typescript-eslint/parser": "8.22.0",
     "eslint": "9.19.0",
