--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/typeorm": "11.0.0",
     "amqp-connection-manager": "4.1.14",
     "amqplib": "0.10.5",
+    "axios": "1.8.1",
     "bcrypt": "5.1.1",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
