feat: mailer module

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "express": "4.21.2",
     "jsonwebtoken": "9.0.2",
     "nestjs-form-data": "1.9.93",
+    "nodemailer": "6.10.0",
     "passport": "0.7.0",
     "passport-custom": "1.1.1",
     "pg": "8.13.1",
@@ -60,6 +61,7 @@
     "@types/jest": "29.5.14",
     "@types/jsonwebtoken": "9.0.8",
     "@types/node": "22.10.10",
+    "@types/nodemailer": "6.4.17",
     "@types/request-ip": "0.0.41",
     "@types/supertest": "6.0.2",
     "@types/uuid": "10.0.0",
