feat: redis module

--- a/res/docker-compose.yml
+++ b/res/docker-compose.yml
@@ -20,3 +20,10 @@ services:
     environment:
       - RABBITMQ_DEFAULT_USER=admin
       - RABBITMQ_DEFAULT_PASS=password
+
+  redis:
+    image: redis:7.4
+    ports:
+      - 6379:6379
+    volumes:
+      - /data
