--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "dayjs": "1.11.13",
     "env-var": "7.5.0",
     "express": "4.21.2",
+    "ioredis": "5.6.0",
     "jsonwebtoken": "9.0.2",
     "nestjs-form-data": "1.9.93",
     "nodemailer": "6.10.0",
