--- a/tsconfig.json
+++ b/tsconfig.json
@@ -62,6 +62,12 @@
       "@slibs/mailer/*": [
         "libs/mailer/src/*"
       ],
+      "@slibs/redis": [
+        "libs/redis/src"
+      ],
+      "@slibs/redis/*": [
+        "libs/redis/src/*"
+      ],
       "@slibs/rmq": [
         "libs/rmq/src"
       ],
