--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@types/bcrypt": "5.0.2",
     "@types/compression": "1.7.5",
     "@types/express": "5.0.0",
+    "@types/ioredis-mock": "8.2.5",
     "@types/jest": "29.5.14",
     "@types/jsonwebtoken": "9.0.8",
     "@types/node": "22.10.10",
@@ -73,6 +74,7 @@
     "eslint-config-prettier": "10.0.1",
     "eslint-plugin-prettier": "5.2.3",
     "globals": "15.14.0",
+    "ioredis-mock": "8.9.0",
     "jest": "29.7.0",
     "jiti": "2.4.2",
     "prettier": "3.4.2",
